--- a/popup.html
+++ b/popup.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <button id="openWindow"></button>
+    <p id="listOfDomains"> List: </p>
     <script src = "popup.js"></script>
   </body>
 </html>
