added https, http, need to make a way to change user agent now that I know how to grab it

--- a/popup.html
+++ b/popup.html
@@ -12,6 +12,7 @@
   <body>
     <button id="openWindow"></button>
     <p id="listOfDomains"> List: </p>
+    <button id="reload">Reload</button>
     <script src = "popup.js"></script>
   </body>
 </html>
