add select button, might want to change it to another page(options page probably)

--- a/popup.html
+++ b/popup.html
@@ -11,6 +11,13 @@
   </head>
   <body>
     <button id="openWindow"></button>
+    <select id="userAgent">
+      <option value = "iPhone">iPhone</option>
+      <option value = "Android">Android</option>
+      <option value = "Windows">Windows</option>
+      <option value = "Linux">Linux</option>
+      <option value = "MacOS">macOS</option>
+    </select>
     <p id="listOfDomains"> List: </p>
     <button id="reload">Reload</button>
     <script src = "popup.js"></script>
